--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-A Warcraft 3 Map I've made some years ago. (Dota like)
+A Warcraft 3 Map I made some years ago. Never finished it. (Dota like)
 Scoreboard is a little bit buggy.
 Feel free to improve it :)
